<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>zzz_jee7</groupId>
    <artifactId>jee7</artifactId>
    <version>0.0.1-SNAPSHOT</version>
  </parent>
   <artifactId>jeee7</artifactId>
   <packaging>war</packaging>

   <dependencies>
     <dependency>
        <groupId>javax</groupId>
        <artifactId>javaee-web-api</artifactId>
        <version>7.0</version>
      </dependency>
    <dependency>
      <groupId>org.primefaces</groupId>
      <artifactId>primefaces</artifactId>
      <version>6.0</version>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.16.10</version>
    </dependency>
    <dependency>
      <groupId>org.seasar.doma</groupId>
      <artifactId>doma</artifactId>
      <version>2.12.1</version>
    </dependency>
   </dependencies>
   <build>
     <finalName>jeee7</finalName>
     <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
            <version>3.1</version>
            <configuration>
            <source>1.8</source>
            <target>1.8</target>
          </configuration>
        </plugin>
        <plugin>
          <artifactId>maven-war-plugin</artifactId>
          <version>2.3</version>
          <configuration>
            <failOnMissingWebXml>false</failOnMissingWebXml>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.wildfly.plugins</groupId>
          <artifactId>wildfly-maven-plugin</artifactId>
          <version>1.0.1.Final</version>
          <configuration>
            <jboss-home>${wildfly.home}</jboss-home>
            <modules-path>${wildfly.home}/modules</modules-path>
            <jvm-args>-ea -Xms64m -Xmx512m -XX:MaxPermSize=256m
                      -Djava.net.preferIPv4Stack=true
                      -Djboss.server.base.dir=${wildfly.home}/standalone
                      -Djboss.socket.binding.port-offset=${wildfly.port.offset}</jvm-args>
            <port>${wildfly.port.mgmt}</port>
          </configuration>
        </plugin>
     </plugins>
   </build>
 </project>